refactor moora logic
